Fixed pagination button too small clickable area

--- a/components/Pagination/Pagination.scss
+++ b/components/Pagination/Pagination.scss
@@ -3,11 +3,14 @@
   //text-align: right;
   li {
     display: inline-block;
-    padding: 10px;
     background-color: $red-cinnabar;
     color: #fff;
     border: 1px solid #fff;
     cursor: pointer;
+    a {
+      display: inline-block;
+      padding: 10px;
+    }
   }
   .page {
     &.selected {
